--- a/Rayquaza/Rayquaza_Final.html
+++ b/Rayquaza/Rayquaza_Final.html
@@ -1,10 +1,10 @@
-<doctype html="">
+<doctype html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="Rayquaza_css.css" type="text/css">
     <title>Rayquaza - Pokémon</title>
   </head>
-  <body bgcolor="#408861"><doctype html="">
+  <body bgcolor="#408861">
     <font face="Arial" size="5">
     <h1><b>Rayquaza</b></h1>
     <hr>
@@ -13,14 +13,14 @@
     </div>
     <hr>
     <div>
-		  <ul>
-        <li>Rayquaza is a generation three pokemon that comes from Hoenn region.</li>
-        <li>He is the main legendary of Pokémon: Emerald, the third game in the Hoenn region.</li>
-        <li>His pokedex number is <a target="blank" href="https://www.pokemon.com/uk/pokedex/rayquaza">#384</a>.</li>
-        <li>In the pokedex, he is between <a target="blank" href="https://www.pokemon.com/uk/pokedex/groudon">Groundon</a>, at #383 and 
-          <a target="blank" href="https://www.pokemon.com/uk/pokedex/jirachi">Jirachi</a> at #385.</li>
-      </ul>
-	  </div>
+	<ul>
+	  <li>Rayquaza is a generation three pokemon that comes from Hoenn region.</li>
+          <li>He is the main legendary of Pokémon: Emerald, the third game in the Hoenn region.</li>
+          <li>His pokedex number is <a target="blank" href="https://www.pokemon.com/uk/pokedex/rayquaza">#384</a>.</li>
+          <li>In the pokedex, he is between <a target="blank" href="https://www.pokemon.com/uk/pokedex/groudon">Groundon</a>, at #383 and 
+            <a target="blank" href="https://www.pokemon.com/uk/pokedex/jirachi">Jirachi</a> at #385.</li>
+       </ul>
+    </div>
     <hr>
     <div>
       <table>
@@ -86,6 +86,6 @@
     </div>
     <hr>
     <button class="button">Click if you like Rayquaza</button>
-	</font>
+    </font>
   </body>
 </doctype>
